5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4365/executions/1577_2897.log
== TEST (2019-04-16 00:17:18) 
-- CODE:
num=int(imput("Digite o numero"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num=int(imput("Digite o numero"))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:17:48) 
-- CODE:
num=int(imput("Digite o numero"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num=int(imput("Digite o numero"))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:18:16) 
-- CODE:
num=int(imput("Digite o numero:"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num=int(imput("Digite o numero:"))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:19:02) 
-- CODE:
num=int(input("Digite o numero:"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.156897
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:

-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:19:07) 
-- CODE:
num=int(input("Digite o numero:"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num=int(imput("Digite o numero:"))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:19:15) 
-- CODE:
num=int(input("Digite o numero:"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.201192
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:

-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:19:42) 
-- CODE:
num=int(input("Digite o numero: "))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.171306
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:

-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:19:47) 
-- CODE:
num=int(input("Digite o numero: "))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num=int(imput("Digite o numero:"))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:19:55) 
-- CODE:
num=int(input("Digite o numero: "))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.132697
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:

-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:21:28) 
-- CODE:


# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num=int(imput("Digite o numero:"))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:21:36) 
-- CODE:


# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.135711
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:

-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:22:15) 
-- CODE:


# Leitura de valores de entrada e conversao para inteiro
num =int(input("Digite o numero: "))

# Impressao do dobro do numero
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num=int(imput("Digite o numero:"))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:22:22) 
-- CODE:


# Leitura de valores de entrada e conversao para inteiro
num =int(input("Digite o numero: "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.204264
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:

-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:22:56) 
-- CODE:


# Leitura de valores de entrada e conversao para inteiro
num =int(input("Digite o numero: "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.206566
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:

-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:23:03) 
-- CODE:


# Leitura de valores de entrada e conversao para inteiro
num =int(input("Digite o numero: "))

# Impressao do dobro do numero
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num=int(imput("Digite o numero:"))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:33:55) 
-- CODE:

# Leitura de valores de entrada e conversao para inteiro

num =int(input("Digite o numero: "))

# Impressao do dobro do numero
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num=int(imput("Digite o numero:"))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:34:38) 
-- CODE:

# Leitura de valores de entrada e conversao para inteiro

num =int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num *2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:35:15) 
-- CODE:

# Leitura de valores de entrada e conversao para inteiro

num =int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:35:55) 
-- CODE:

# Leitura de valores de entrada e conversao para inteiro

num =int(input("Digite um numero: "))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:36:03) 
-- CODE:

# Leitura de valores de entrada e conversao para inteiro

num =int(input("Digite um numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.159775
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
